--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -397,7 +397,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
   .navbar {
     display: none;
   }
